styles.css
/* 
Customized header 
Made from the original header
*/

header {
    height: 0px;
    overflow: hidden;
    position: fixed;
    transition: height 0.7s ease;
    width: 100%;
    z-index: 1;
}

header .menu-nav.menu-page{
    overflow: hidden;
    padding: 15px 0;
    position: relative;
}

header .menu-fixed {
    background-color: #e7e7e7;
}

header .menu-fixed ul {
    top: 20px;
}








/* 
Custom added navigation buttons 
*/

button.navigation {
    background-color: #171b1c;
    border: 3px solid #303435;
    border-radius: 100%;
    cursor: pointer;
    height: 90px;
    margin-top: -45px;
    position: fixed;
    top: 50vh;
    width: 90px;
    z-index: 1;
}
button.navigation::before {
    border-left: 3px solid #303435;
    border-bottom: 3px solid #303435;
    content: "";
    height: 30px;
    position: absolute;
    width: 30px;
}

button#navigate-previous {
    left: 7vw;
}
button#navigate-previous::before {
    bottom: 25px;
    right: 20px;
    transform: rotate(45deg);
}

button#navigate-next {
    right: 7vw;
}

button#navigate-next::before {
    bottom: 25px;
    left: 20px;
    transform: rotate(-135deg);
}







/* 
Customized footer 
Recycled from existing component on the page
*/

.manga_read:first-child {
    background-color: #171b1c;
    border-top: ridge #e7e7e7;
    border-top-width: 0px;
    bottom: 0;
    display: block;
    height: 0px;
    overflow: hidden;
    padding: 0;
    position: fixed;
    transition: all 0.7s ease;
    width: 100vw;
    z-index: 1;
}
  
.manga_read:first-child .title {
    /* Hidden with visibility and not display so that
    a child (the h2) can be made visible */
    visibility: hidden;
}
  
.manga_read:first-child h2{
    left: 50px;
    padding-top: 30px;
    position: absolute;
    visibility: visible;
}
  
.manga_read:first-child h2:before  {
    font-size: 26px;
    color: #fe8006;
    content: "Now reading: ";
}
  
.manga_read:first-child h2 a  {
    font-size: 26px;
}

.manga_read .go_page::before {
    color: #fe8006;
    content: "Chapter: ";
    font-size: 16px;
    padding-right: 10px;
    padding-left: 50px;
}

.manga_read .go_page{
    margin-top: 55px;
}

#top_chapter_list {
    display: inline;
    position: relative;
}

.manga_read .go_page .page_select {
    display: inline;
    position: relative;
}

.manga_read .go_page .page_select::before {
    color: #fe8006;
    content: "Page: ";
    font-size: 16px;
    padding-right: 10px;
    padding-left: 30px;
}

.manga_read .go_page .page_select a {
    display: none;
}
  
.manga_read:first-child .go_page_btn  {
    display: none;
}






/* 
Miscellaneous
*/

/* On small manga pages there should be no scroll bar*/
.main {
    min-height: 100vh;
}

/* To make labels next to select items align nicely */
select {
    vertical-align: unset;
}

/* The site navigation with login search and fb like */
body {
    background-color: #171b1c;
}

.plug-right {
    transition: width 0.7s ease-in-out;
    width: 0px;
}

footer {
    display: none;
}

#viewer {
    padding: 2rem;
}

.manga_read {
    display: none;
}

